Use Character.valueOf instead of deprecated Character constructor (#29)